syntax = "proto3";
package kratos.api;

option go_package = "github.com/carv-protocol/verifier/internal/conf;conf";

import "google/protobuf/duration.proto";

enum ENV {
  ENV_UNSPECIFIED = 0;
  ENV_LOCAL = 1;
  ENV_DEV = 2;
  ENV_UAT = 3;
  ENV_PROD = 4;
}

message Bootstrap {
  Server server = 1;
  Data data = 2;
  ENV env = 3;
  Chain chain = 4;
  Contract contract = 5;
  Wallet wallet = 7;
  Signature signature = 8;
  GaslessService gasless_service = 9;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
    int32 max_open_connections = 3;
    int32 max_idle_connections = 4;
    google.protobuf.Duration conn_max_lifetime = 5;
    google.protobuf.Duration conn_max_idle_time = 6;
  }

  Database database = 1;
}

message Chain {
  int64 chain_id = 1;
  string chain_name = 2;
  string rpc_url = 3;
  int64 start_block = 4;
  int64 offset_block = 5;
}

message Contract {
  string addr = 1;
  string tee_addr = 2;
  string topic1 = 3; // topic1 is the topic of the event: teeReportAttestations
  string topic2 = 4; // topic2 is the topic of the event: confirmVrfNode
}

message Wallet {
  enum Mode {
    ModeEnvVar = 0;
    ModePrivateKey = 1;
    ModeKeyStore = 2;
  }

  Mode mode = 1;
  string private_key = 2;
  string keystore_path = 3;
  string keystore_password = 4;

  string reward_claimer_addr = 5;
  int64 commission_rate = 6;
}

message Signature {
  string domain_name = 1;
  string domain_version = 2;

  int64 expired_time = 4;
}

message GaslessService {
  string url = 1;
}
